welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:9: error: not found: value biscuit
 biscuit match {
 ^